--- a/src/sass/partials/_chatInput.scss
+++ b/src/sass/partials/_chatInput.scss
@@ -212,10 +212,11 @@
                     align-self: start;
                     display: inline;
 
-                    /*.no-select {
+                    &.no-select {
                         user-select: text !important;
                         -webkit-user-select: text !important;
-                    }*/
+                        -webkit-touch-callout: unset !important;
+                    }
 
                     a {
                         color: $darkblue;
